examples/test/testpolicy412.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy412
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value45
          key21: value12
      podSelector:
        matchLabels:
          key20: value37
          key45: value23
          key33: value46
